provarAnt/00D1b0000000d5bEAA/objects/geopointe__Shape__c.object
<CustomObject>
    <description>Keeps track of custom shapes for use on the Map page.</description>
    <fields>
        <fullName>geopointe__Center__c</fullName>
        <description>The center point of a circle or the centroid of a polygon.</description>
        <label>Center</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>geopointe__Color__c</fullName>
        <inlineHelpText>The hexadecimal color for this shape, such as #8ce013.</inlineHelpText>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Description__c</fullName>
        <inlineHelpText>A short description for this shape.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Dissolve__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, and the shape is comprised of multiple shapes it will dissolve the shapes.</inlineHelpText>
        <label>Dissolve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Folder__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Folder</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>geopointe__GP_Folder__c.geopointe__Type__c</field>
                <operation>equals</operation>
                <value>Shape</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>geopointe__GP_Folder__c</referenceTo>
        <relationshipLabel>Geopointe Shapes</relationshipLabel>
        <relationshipName>Geopointe_Shapes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Lat_Lng_10__c</fullName>
        <description>See Coordinates 1 field.</description>
        <label>Coordinates 10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Lat_Lng_1__c</fullName>
        <description>These fields contains longitude and latitude data for shapes. The structure follows the GeoJSON spec for coordinates: [[[lng, lat], [lng, lat]]] . IMPORTANT: Field name is Lat_Lng_n__c but GeoJSON stores ongitude first, latitude second. If array of lng/lat points is too long for one field it should be split across mutliple Lat_Lng_n__c fields.</description>
        <label>Coordinates 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Lat_Lng_2__c</fullName>
        <description>See Coordinates 1 field.</description>
        <label>Coordinates 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Lat_Max__c</fullName>
        <label>Max Latitude</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Lat_Min__c</fullName>
        <externalId>true</externalId>
        <label>Min Latitude</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Lng_Max__c</fullName>
        <label>Max Longitude</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Lng_Min__c</fullName>
        <externalId>true</externalId>
        <label>Min Longitude</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Opacity__c</fullName>
        <inlineHelpText>The opacity value for this shape. Valid ranges are 0.00 - 1.00</inlineHelpText>
        <label>Opacity</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Personal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Radius__c</fullName>
        <inlineHelpText>The radius for circle shapes. Kilometer or miles is defined by the Units field.</inlineHelpText>
        <label>Radius</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Straddles_180__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only applies to Standard shapes. If checked, the shape straddles the 180th meridian.</inlineHelpText>
        <label>Straddles 180th Meridian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Polygon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>geopointe__Units__c</fullName>
        <inlineHelpText>Miles or kilometers designating the unit of measure for this shape.</inlineHelpText>
        <label>Units</label>
        <picklist>
            <picklistValues>
                <fullName>Kilometers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miles</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>geopointe__Usage_Type__c</fullName>
        <label>Usage Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shape Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GeoShape</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Geopointe Shape</label>
    <listViews>
        <fullName>geopointe__All</fullName>
        <columns>NAME</columns>
        <columns>geopointe__Type__c</columns>
        <columns>geopointe__Usage_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>geopointe__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shape Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Shapes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>